--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,17 @@
   border-radius: 20px;
   background-color: #fafafa;
 }
+
+
+@media (max-width: 1000px) {
+
+  .container {
+    display: flex;
+    margin: 30px 5%;
+    border: 1px solid #2c2c2c;
+    border-radius: 20px;
+    background-color: #fafafa;
+  }
+  
+
+}
