--- a/src/components/messenger/Messenger.css
+++ b/src/components/messenger/Messenger.css
@@ -53,30 +53,13 @@
 
 .no-chat {
   display: flex;
-  align-items: center;
   justify-content: center;
-  height: 100%;
   position: relative;
   justify-content: space-around;
-  display: flex;
   height: 100%;
   flex-direction: column;
   background-color: #fafafa;
   border-radius: 20px;
-}
-
-
-.no-chat::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("../../assets/img/pattern.png");
-  background-size: cover;
-  background-position: center;
-  opacity: 0.15;
 }
 
 .messages {
@@ -101,12 +84,14 @@ input {
   background-color: #fafafa;
   z-index: 1000;
 }
+
 .input-area input {
   flex-grow: 1;
   padding: 10px;
   border: 1px solid #c5baaa;
   border-radius: 10px;
 }
+
 .input-area p {
   color: #806d61;
   font-size: 10px;
@@ -173,20 +158,33 @@ input {
   object-position: center;
 }
 
+.online-avatar {
+  border: 2px solid #ee7828;
+}
+
+.offline-avatar {
+  border: 2px solid #806d61;
+}
+
+.person-item-content {
+  align-items: center;
+  display: flex;
+}
+
 .person-item {
   display: flex;
   align-items: center;
   cursor: pointer;
+  position: relative;
 }
 
 .person-item:hover {
   color: #ee7828;
 }
 
-.online-indicator {
+.online-icon {
   color: #ee7828;
-  font-size: 8px;
-  margin-left: 8px;
+  padding-left: 10px;
 }
 
 .fileContainer {
@@ -197,8 +195,31 @@ input {
 }
 
 .selected-person {
-  background-color: #f0f0f0; /* Например, светлый серый фон */
-  border-left: 4px solid #806d61; /* Левый бордюр, чтобы выделить выбранного человека */
-  /* Дополнительные стили по вашему желанию */
-  border-radius:15px;
+  background-color: #f0f0f0;
+  border-left: 4px solid #806d61;
+  border-radius: 15px;
+}
+
+.notification-icon {
+  margin-left: 10px;
+  color: #806d61;
+}
+
+.statusContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 1000px) {
+  .people-list {
+    width: 30%;
+
+    padding: 10px;
+    flex-direction: row;
+  }
+
+  .person-info {
+    display: none;
+  }
 }
