--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,12 +1,25 @@
 .sidebar {
   width: 160px;
   height: 90vh;
+  position: relative;
   background-color: #2c2c2c;
   border-radius: 20px 0 0 20px;
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-direction: column;
+}
+
+.sidebar::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../../assets/img/pattern1.png");
+  background-size: cover;
+  background-position: center;
+  opacity: 0.15;
 }
 
 .sidebar ul {
@@ -26,4 +39,11 @@
 
 .logo {
   height: 70px;
+  z-index: 100;
+}
+
+.no-chat p {
+  text-align: center;
+  font-size: 25px;
+  color: #2c2c2c;
 }
